[build]
build = "build.rs"

[package]
name = "grablt"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["stream"] }
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
cc = "1.0.96"
indicatif = "0.17.8"
futures-util = "0.3.30"
serde_json = "1.0.117"